--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #5945a7;
+}
+
+.BoxFilmes {
+  width: 80%;
+  max-width: 1200px;
+  background-color: #2f2e33;
+  padding: 40px 50px;
+  margin: 10px auto;
+  border-radius: 20px;
+}
+
+.BoxFilmes h2 {
   text-align: center;
+  color: #8869ff;
+  margin-bottom: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.filmesGrid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.filmeCard {
+  background-color: #8869ff;
+  border-radius: 20px;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.filmeCard img {
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+  margin-bottom: 15px;
+}
+
+form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+form input {
+  padding: 10px;
+  border: 1px solid #8869ff;
+  border-radius: 10px;
+  flex: 1;
+  background-color: #2f2e33;
+  color: #8869ff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form button {
+  padding: 10px 15px;
+  background-color: #2f2e33;
+  color: #8869ff;
+  border: none;
+  border-radius: 5px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #5945a7;
+}
+
+.filmeCard p {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 5px 0;
+  color: #2f2e33;
+}
+
+.filmeCard h3 {
+  font-size: 22px;
+  font-weight: 700;
+  padding: 5px 0;
+  color: #2f2e33;
 }
